--- a/laravel-vue-app/package.json
+++ b/laravel-vue-app/package.json
@@ -16,6 +16,8 @@
         "vue": "^3.3.4"
     },
     "dependencies": {
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.3",
         "vue-loader": "^17.2.2",
         "vue-router": "^4.2.4"
     }
